Fixed array information in Notebook

--- a/ch2p1_through_ch2p8.ipynb
+++ b/ch2p1_through_ch2p8.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,6 @@
     "print((-4+7j)*(-5-6j))\n",
     "M = 5\n",
     "print('M = ' + str(M))\n",
-    "M\n",
     "N = 6\n",
     "print('N = ' + str(N))\n",
     "P = M + N\n",
@@ -210,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__ch2p5__ We can find roots of polynomials using the `roots` function from the numpy library. The roots are returned as a column vector. For example, find the roots of $5s^{4} + 7s^{3} + 9s^{2} - 3s + 2 = 0$."
+    "__ch2p5__ We can find roots of polynomials using the `roots` function from the numpy library. The roots are returned as an array. For example, find the roots of $5s^{4} + 7s^{3} + 9s^{2} - 3s + 2 = 0$."
    ]
   },
   {
@@ -266,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__ch2p7__ The partial-fraction expansion for $F(s) = \\frac{b(s)}{a(s)}$ can be found using the `[r,p,k] = residue(b,a)` function from the `scipy` library. `r`=residue, `p`=roots/poles of denominator, and `k`=coefficients of the direct polynomial term. Optinally, we will use the `flip` function from the numpy library to reverse the order of the elements in `r`,`p`, and `k` so they go from \n",
+    "__ch2p7__ The partial-fraction expansion for $F(s) = \\frac{b(s)}{a(s)}$ can be found using the `[r,p,k] = residue(b,a)` function from the `scipy` library. `r`=residue, `p`=roots/poles of denominator, and `k`=coefficients of the direct polynomial term.\n",
     "\n",
     "We expand \n",
     "\n",
@@ -351,13 +350,6 @@
     "print('p = ' + str(p))\n",
     "print('k = ' + str(k))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
