--- a/ch8_misc_exercises.ipynb
+++ b/ch8_misc_exercises.ipynb
@@ -259,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "<control.ctrlplot.ControlPlot at 0x13b140410>"
+       "<control.ctrlplot.ControlPlot at 0x146984550>"
       ]
      },
      "execution_count": 1,
@@ -276,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6522e01148404f23bbf1e45f65095799",
+       "model_id": "9b191b3a28fb49b68e8337a8e637dfad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,7 +396,7 @@
     "\n",
     "Using the step input equation for Type 0 from that table 1/(1+K_p)\n",
     "\n",
-    "= 1/(1+)\n",
+    "= 1/(1+K_p), where K_p = G(0)\n",
     "\n",
     "= 0.52"
    ]
