Fixed typo for TryIt 9.1

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -16,7 +16,7 @@
     "### TryIt 9.1 - Lag (Non-Ideal) Compensator\n",
     "Use the following Python and Python Control Systems library to reproduce Figure 9.13.\n",
     "\n",
-    "Figure 9.13 is from Exercise 9.2 which explains how to design a lag-compensator.\n",
+    "Figure 9.13 is from Example 9.2 which explains how to design a lag-compensator.\n",
     "\n",
     "The plant in question is\n",
     "\n",
