Made some wording improvements to Skill-Assessment Exercise 9.1. No code or equation changes.

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -221,7 +221,7 @@
     "\n",
     "Even though $e(\\infty)$ was previously computed as $0.1524$, the book's answer as $0.1527$ will be used instead.\n",
     "\n",
-    "Basically followed Example 9.2.\n",
+    "Followed Example 9.2 closely for this. Admittedly, there are some parts I don't quite understand.\n",
     "\n",
     "To improve by a factor of 20, divide the error by 20:\n",
     "\n",
@@ -241,7 +241,7 @@
     "\\frac{z_{c}}{p_{c}} = \\frac{K_{vn}}{K_{vo}} = \\frac{130.975767}{6.562857} = 19.95712 \\approx 20\n",
     "$$\n",
     "\n",
-    "Example 9.2 \"arbitrarily\" sets the compensator pole to $0.01$. I believe they do this so that the pole is somewhat close to the origin. Regardless, this makes $p_{c} = 0.01$. Then,\n",
+    "Example 9.2 \"arbitrarily\" sets the compensator pole to $0.01$. My belief is this is done so that the pole is somewhat close to the origin. Regardless, this makes $p_{c} = 0.01$. Then,\n",
     "\n",
     "$$\n",
     "z_{c} = 20p_{c} = 0.01\n",
@@ -261,9 +261,9 @@
    "source": [
     "__c.__ Evaluate the steady-state error for a unit ramp input to your compensated system.\n",
     "\n",
-    "Basically, repeat step __a__ but use the new compensated $G(s)$. So find the new gain where the overshoot line intersects the new root locus plot and use this new gain to compute the new steady-state error.\n",
+    "Repeat step __a__ but with the new compensated $G_{c}(s)$. Plot the root locus of the compensated $G_{c}(s)$, find the new gain where the damping ratio line of 0.5169 intersects the new root locus plot, and use this new gain to compute the new steady-state error.\n",
     "\n",
-    "The compensator $G_{lag}(s)$ being cascaded with the original $G(s)$ is\n",
+    "The new compensated $G_{c}(s)$ is\n",
     "\n",
     "$$\n",
     "G_{c}(s) = \\frac{K(s+0.2)}{s(s+7)(s+0.01)}\n",
@@ -339,13 +339,13 @@
    "source": [
     "Find the point on the root locus where the damping ratio of 0.5169 crosses. The point I selected was $s=-3.402+5.635j$ with $K = 44.66$.\n",
     "\n",
-    "Find $K_{v}$ to compute $e(\\infty)$.\n",
+    "Find $K_{v}$ which is needed to compute $e(\\infty)$:\n",
     "\n",
     "$$\n",
     "K_{v} = \\lim_{s\\to0} sG_{c}(s) = \\lim_{s\\to0}\\frac{K(s+0.2)}{(s+7)(s+0.01)} = \\frac{44.66(0.2)}{(7)(0.01)} = 127.6\n",
     "$$\n",
     "\n",
-    "Compute the ramp-input steady-state error:\n",
+    "Now compute $e(\\infty)$:\n",
     "\n",
     "$$\n",
     "e(\\infty) = \\frac{1}{K_{v}} = \\frac{1}{127.6} = 0.00783\n",
@@ -359,7 +359,7 @@
    "source": [
     "__d.__ Evaluate how much improvement in steady-state error was realized.\n",
     "\n",
-    "Divide old uncompensated error found in part __a.__ by new compensated error found in part __c.__\n",
+    "Divide the old uncompensated error found in part __a.__ by the new compensated error found in part __c.__\n",
     "\n",
     "$$\n",
     "\\frac{0.1527}{0.0078} = 19.5769\n",
