Revised some typos in Skill-Assessment 9.2

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -433,7 +433,7 @@
     "\\theta = 180^{\\circ} - cos^{-1}(\\zeta) = 180^{\\circ} - cos^{-1}(0.5169) = 180^{\\circ} - 58.88^{\\circ} = 121.12^{\\circ}\n",
     "$$\n",
     "\n",
-    "Substitute $\\theta$ into the equation before it. Remember that cos(\\theta) is just the real part already found, so that will be used instead:\n",
+    "Substitute $\\theta$ into the equation before it. Remember that $cos(\\theta)$ is just the real part already found, so that will be used instead:\n",
     "\n",
     "$$\n",
     "sin(\\theta) = cos(\\theta)tan(\\theta) = -10.5tan(121.12^{\\circ}) = -17.4\n",
@@ -443,11 +443,9 @@
     "\n",
     "Per the problem's requirements, the zero of the compensator will be at -10.\n",
     "\n",
-    "Recall (Eq 8.20) that the sum of the angles of the poles and zeros should equal $180^{\\circ}$, where zero angles are positive and pole angles are negative.\n",
-    "\n",
     "The sum of the pole and zero angles to the closed-loop pole $s = -10.5 + 17.4$ should be $180^{\\circ}$. We have all the poles and zeros, except for the compensator pole, so when we add this sum, it won't be quite $180^{\\circ}$. The difference between this sum and $180^{\\circ}$ is the angle of the compensator pole.\n",
     "\n",
-    "There are zeros at -10 and 0, and there is a pole at -7. The angle from each of these to $s = -10.5 + 17.4$ will be computed.\n",
+    "There are poles at -7 and 0, and the compensator zero at -10. The angle from each of these to $s = -10.5 + 17.4$ will be computed.\n",
     "\n",
     "The equation for the angle from a real value $p1$ on the real axis to a point in the complex plane $p0$ is\n",
     "\n",
