Added note on how to compute the gain K to Skill Assessment Exercise 9.2

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -503,6 +503,8 @@
     "Determine the gain needed for the new compensated system to maintain 15% overshoot. \n",
     "\n",
     "Generate root locus plot, re-select the closed-loop pole of $s=-10+17.4j$ on the root locus (which is still crossing the damping ratio line of 0.5169). The gain at the closed-loop is reported to be 477.2.\n",
+    "\n",
+    "Note that the gain K can also be found using the lengths of the vectors from the poles and zeros to the closed-loop pole. See Eq 8.48.\n",
     "\n"
    ]
   },
