Updated wording for Skill-Assessment Exercise 9.3. Note this exercise still needs to be finished

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -689,7 +689,7 @@
    "source": [
     "__c.__ Design a lag-lead compensator to decrease the settling time by 2 times and decrease the steady-state error for a unit ramp input by 10 times. Place the lead zero at -3.\n",
     "\n",
-    "To decrease the settling time by 2x, is to divide $T_{s}$ by 2, which means the denominator will look like $2(\\zeta\\omega_{n})$. But $\\zeta\\omega_{n}$ is just the real part of the pole. So this means the real part must be doubled. So the new real-part of the desired closed-loop is\n",
+    "To decrease the settling time by 2x, is to divide $T_{s}$ by 2, which means the denominator will look like $2(\\zeta\\omega_{n})$. But $\\zeta\\omega_{n}$ is just the real part of the pole, meaning the real part must be doubled. Thus, the new real-part of the desired closed-loop pole is\n",
     "\n",
     "$$\n",
     "2(\\zeta\\omega_{n}) = 2(-3.499) = -6.998\n",
@@ -697,13 +697,13 @@
     "\n",
     "Now that the real part of the new closed-loop pole has been determined, the imaginary part needs to be updated.\n",
     "\n",
-    "Since we have the real part and the angle (need to convert damping-ratio to degrees) we can compute the imaginary part. In other words, we have a right triangle, the bottom part which is the real part, and the angle damping-ratio line makes with the real-axis. We just need to find the \"height,\" or the imaginary part. First, convert damping-ratio to proper degrees\n",
+    "Since the real part and the angle (need to convert damping-ratio to degrees) are known, the imaginary part can be computed. In other words, there is a right triangle, the bottom part which is the real part, and the angle damping-ratio line makes with the real-axis. The \"height,\" or the imaginary part, just needs to be found. First, convert damping-ratio to proper degrees\n",
     "\n",
     "$$\n",
     "\\theta = 180^{\\circ} - cos^{-1}(\\zeta) = 180^{\\circ} - cos^{-1}(0.456) = 180^{\\circ} - 62.87^{\\circ} = 117.13^{\\circ}\n",
     "$$\n",
     "\n",
-    "Now that we have the angle, using trig, we know that the imaginary part (the triangle height) is\n",
+    "Now that the angle is in a proper format, using trig, the imaginary part (the triangle height) can be computed\n",
     "\n",
     "$$\n",
     "tan(\\theta) = \\frac{sin(\\theta)}{cos(\\theta)} => sin(\\theta) = cos(\\theta)tan(\\theta)\n",
@@ -717,9 +717,9 @@
     "\n",
     "Thus, the new closed-loop pole is at $s = -6.998 + 13.658j$.\n",
     "\n",
-    "Now to design the lead compensator. We will place a zero at -3 per the problem's requirement.\n",
+    "Now to design the lead compensator. Per the problem's requirement, the compensator zero will be placed at -3.\n",
     "\n",
-    "To determine the compensator pole, we will determine its angle to the closed-loop pole. Since we just added the compensator zero, we know the sum of the angles isn't quite $180^{\\circ}$, due to the missing pole. The difference between this sum and $180^{\\circ}$ is the compensator pole's angle.\n",
+    "To determine the compensator pole, its angle to the closed-loop pole will be computed. Since the compensator zero was just added, the sum of the angles won't be quite $180^{\\circ}$, due to the missing pole. The difference between this sum and $180^{\\circ}$ is the compensator pole's angle.\n",
     "\n",
     "The Python code from the previous problem will be used to compute this angle.\n"
    ]
@@ -788,7 +788,7 @@
     "G_{LC}(s) = \\frac{K(s+3)}{s(s+7)(s+9.603)}\n",
     "$$\n",
     "\n",
-    "Recompute the gain K for the given overshoot = 20% => damping ratio $\\zeta=0.456$. A root locus plot will be generated using the new $G_{LC}(s)$ and the point $s=-6.998 + 13.658j$ at which the damping ratio crosses the root locus will be selected. The plot shows the K value at this point."
+    "Recompute the gain K for the given overshoot = 20% => damping ratio $\\zeta=0.456$. A root locus plot will be generated using the new $G_{LC}(s)$ and the at which the damping ratio crosses the root locus will be selected. The plot shows the K value at this point."
    ]
   },
   {
