Updated working for Skill-Assessment Exercise 9.3. Note this exercise still needs to be finished.

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -719,7 +719,7 @@
     "\n",
     "Now to design the lead compensator. Per the problem's requirement, the compensator zero will be placed at -3.\n",
     "\n",
-    "To determine the compensator pole, its angle to the closed-loop pole will be computed. Since the compensator zero was just added, the sum of the angles won't be quite $180^{\\circ}$, due to the missing pole. The difference between this sum and $180^{\\circ}$ is the compensator pole's angle.\n",
+    "To determine the compensator pole, its angle to the closed-loop pole will be computed. Since the compensator zero was just added, the sum of the system's pole and zero angles won't be quite $180^{\\circ}$, due to the missing compensator pole. The difference between this sum and $180^{\\circ}$ is the compensator pole's angle.\n",
     "\n",
     "The Python code from the previous problem will be used to compute this angle.\n"
    ]
