Fixed some wording for Skill-Assessment Exercise 9.3. Note this exercises still needs to be finished.

--- a/ch9_misc_exercises.ipynb
+++ b/ch9_misc_exercises.ipynb
@@ -697,7 +697,7 @@
     "\n",
     "Now that the real part of the new closed-loop pole has been determined, the imaginary part needs to be updated.\n",
     "\n",
-    "Since the real part and the angle (need to convert damping-ratio to degrees) are known, the imaginary part can be computed. In other words, there is a right triangle, the bottom part which is the real part, and the angle damping-ratio line makes with the real-axis. The \"height,\" or the imaginary part, just needs to be found. First, convert damping-ratio to proper degrees\n",
+    "Since the real part and the angle (need to convert damping-ratio to degrees) are known, the imaginary part can be computed. In other words, there is a right triangle, the bottom part which is the real part, and the angle that the damping-ratio line makes with the real-axis. The \"height,\" or the imaginary part, just needs to be found. First, convert damping-ratio to proper degrees\n",
     "\n",
     "$$\n",
     "\\theta = 180^{\\circ} - cos^{-1}(\\zeta) = 180^{\\circ} - cos^{-1}(0.456) = 180^{\\circ} - 62.87^{\\circ} = 117.13^{\\circ}\n",
@@ -788,7 +788,7 @@
     "G_{LC}(s) = \\frac{K(s+3)}{s(s+7)(s+9.603)}\n",
     "$$\n",
     "\n",
-    "Recompute the gain K for the given overshoot = 20% => damping ratio $\\zeta=0.456$. A root locus plot will be generated using the new $G_{LC}(s)$ and the at which the damping ratio crosses the root locus will be selected. The plot shows the K value at this point."
+    "Recompute the gain K for the given overshoot = 20% => damping ratio $\\zeta=0.456$. A root locus plot will be generated using the new $G_{LC}(s)$ and the point at which the damping ratio crosses the root locus will be selected. The plot shows the K value at this point."
    ]
   },
   {
