Improved grammar. No math, code, or explanation change.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will increase by 20dB/dec if the break frequency is a zero or decrease by 20dB/dec if it's a pole.\n",
     "\n",
-    "From 1 rad/s to 7 rad/s, the slope is -20dB/dec. The slope decreases by 20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Assuming (x,y) coordinates or (x freq, y mag), I have a hand drawn line from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
+    "From 1 rad/s to 7 rad/s, the slope is -20dB/dec. The slope decreases by 20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Using (x freq, y mag) coordinates, my hand drawn line here is from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
     "\n",
     "From 7 rad/s to 20 rad/s, the slope is -40dB/dec. The slope further decreases by 20dB/dec since there is a pole at 7 rad/s. My hand drawn -40dB/dec slope line intersects 20 rad/s at $\\approx -60 dB$, so my hand drawn line here is from (7 rad/s,-43 dB) to (20 rad/s, -60 dB).\n",
     "\n",
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ec4088b70943699e14bbbd602df7e2",
+       "model_id": "e511b02917ed4b28a047079a1f6993de",
        "version_major": 2,
        "version_minor": 0
       },
