Added hand drawing info. No math, code, or explanation change.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -22,7 +22,7 @@
     "From the poles and zeros of G(s), the break frequencies are at 1, 7, 20, and 50 rad/s. The lower limit of the frequency axis should be at least one decade less than the lowest break frequency, and the upper limit should be at least one decade greater than highest break frequency. Thus, the frequency axis limits are 0.1 and 1000 rad/s.\n",
     "\n",
     "#### Drawing the Magnitude Response\n",
-    "When drawing these Bode plots by hand, using [semi-log paper](https://www.electronics-tutorials.ws/resources/printable-semi-log-graph-paper.html) can make the process much easier.\n",
+    "When drawing these Bode plots by hand, using [semi-log paper](https://www.electronics-tutorials.ws/resources/printable-semi-log-graph-paper.html) and a ruler can make the process much easier.\n",
     "\n",
     "The magnitude from 0.1 rad/s to the first break frequency at 1 rad/s is a flat line. To find the value of this flat line, substitude $s = 0$ in $G(s)$, since this is the low frequency range.\n",
     "\n",
