Improved grammar. No math, code, or explanation change.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -36,7 +36,7 @@
     "20log_{10}(\\frac{2}{35}) = -24.86 \\approx -25dB\n",
     "$$\n",
     "\n",
-    "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will increase by 20dB/dec if the break frequency is a zero or decrease by 20dB/dec if it's a pole.\n",
+    "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will either increase by 20dB/dec if it's a zero or decrease by 20dB/dec if it's a pole.\n",
     "\n",
     "From 1 rad/s to 7 rad/s, the slope is -20dB/dec. The slope decreases by 20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Using (x freq, y mag) coordinates, my hand drawn line here is from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
     "\n",
