Improved grammar. No math, code, or explanation change.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -38,13 +38,13 @@
     "\n",
     "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will either increase by 20dB/dec if it's a zero or decrease by 20dB/dec if it's a pole.\n",
     "\n",
-    "From 1 rad/s to 7 rad/s, the slope is -20dB/dec. The slope decreases by 20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Using (x freq, y mag) coordinates, my hand drawn line here is from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
+    "From 1 rad/s to 7 rad/s, the slope decreases to -20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Using (x freq, y mag) coordinates, my hand drawn line here is from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
     "\n",
-    "From 7 rad/s to 20 rad/s, the slope is -40dB/dec. The slope further decreases by 20dB/dec since there is a pole at 7 rad/s. My hand drawn -40dB/dec slope line intersects 20 rad/s at $\\approx -60 dB$, so my hand drawn line here is from (7 rad/s,-43 dB) to (20 rad/s, -60 dB).\n",
+    "From 7 rad/s to 20 rad/s, the slope further decreases to -40dB/dec since there is a pole at 7 rad/s. My hand drawn -40dB/dec slope line intersects 20 rad/s at $\\approx -60 dB$, so my hand drawn line here is from (7 rad/s,-43 dB) to (20 rad/s, -60 dB).\n",
     "\n",
-    "From 20 rad/s to 50 rad/s, the slope is -20dB/dec. The slope **increases** by 20dB/dec since there is a zero at 20 rad/s. My hand drawn -20dB/dec slope line intersects 50 rad/s at $\\approx -68 dB$, so my hand drawn line here is from (20 rad/s,-60 dB) to (50 rad/s, -68 dB).\n",
+    "From 20 rad/s to 50 rad/s, the slope increases to -20dB/dec since there is a zero at 20 rad/s. My hand drawn -20dB/dec slope line intersects 50 rad/s at $\\approx -68 dB$, so my hand drawn line here is from (20 rad/s,-60 dB) to (50 rad/s, -68 dB).\n",
     "\n",
-    "After 50 rad/s, the slope is -40dB/dec. The slope further decreases by 20dB/dec since there is a pole at 50 rad/s. My hand drawn -40dB/dec slope line intersects 100 rad/s at $\\approx -80 dB$, so my hand drawn line here is from (50 rad/s,-68 dB) to (100 rad/s, -80 dB).\n",
+    "After 50 rad/s, the slope decreases to -40dB/dec since there is a pole at 50 rad/s. My hand drawn -40dB/dec slope line intersects 100 rad/s at $\\approx -80 dB$, so my hand drawn line here is from (50 rad/s,-68 dB) to (100 rad/s, -80 dB).\n",
     "\n",
     "My hand plotted points (1 rad/s, -25 dB), (7 rad/s, -43 dB), (20 rad/s, -60 dB), (50 rad/s, -68 dB), and (100 rad/s, -80 dB) are close to the true values in the Bode magnitude response plot below."
    ]
