Completed Skill-Assessment Exercise 10.2, specifically the phase plotting portion.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -36,7 +36,7 @@
     "20log_{10}(\\frac{2}{35}) = -24.86 \\approx -25dB\n",
     "$$\n",
     "\n",
-    "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will either increase by 20dB/dec if it's a zero or decrease by 20dB/dec if it's a pole.\n",
+    "Thus, the magnitude from 0.1 rad/s to 1 rad/s is a flat line at -25dB. We will now go from break frequency to break frequency, so 1 rad/s to 7 rad/s to 20 rad/s to 50 rad/s. At each break frequency, the magnitude slope will either increase by 20dB/dec if it's a zero or decrease by 20dB/dec if it's a pole (Figure 10.9).\n",
     "\n",
     "From 1 rad/s to 7 rad/s, the slope decreases to -20dB/dec since there is a pole at 1 rad/s. My hand drawn -20dB/dec slope line intersects 7 rad/s at $\\approx -43 dB$. Using (x freq, y mag) coordinates, my hand drawn line here is from (1 rad/s,-25 dB) to (7 rad/s, -43 dB).\n",
     "\n",
@@ -50,6 +50,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "751834f1",
+   "metadata": {},
+   "source": [
+    "#### Drawing the Phase Response\n",
+    "\n",
+    "Unlike magnitude where the slope starts at the pole, for phase, the slope begins a decade before and after the pole. So my technique is to draw the individual phase plots for each pole/zero first, and then add them all to produce the final phase plot. Like before with the magnitude plots, semi-log paper and a ruler is highly advised.\n",
+    "\n",
+    "For first order terms, the phase is constant (slope is flat) until a decade before the pole, slopes up/down by 45deg/dec for 2 decades (so ends decade after the pole), and then resumes being constant (flat) for the rest of the frequency range. The phase slope goes up if the frequency is a zero, and goes down if it's a zero. See Figure 10.9 for more info.\n",
+    "\n",
+    "The \"break frequencies\" where the phase slope changes will be determined first. As previously stated, the phase slope starts a decade before the pole/zero frequency and ends a decade after. Thus, the break frequencies are\n",
+    "\n",
+    "For pole at -1:  0.1 to 10  rad/s, slope negative\\\n",
+    "For pole at -7:  0.7 to 70  rad/s, slope negative\\\n",
+    "For pole at -50: 0.5 to 500 rad/s, slope negative\\\n",
+    "For zero at -20: 0.2 to 200 rad/s, slope positive\n",
+    "\n",
+    "The slopes for each pole/zero have been included. For example, for the pole at -1, the slope is 0 deg/dec until 0.1 rad/s, then decreases by -45 deg/dec until 10 rad/s, then returns to 0 deg/dec and stays at this slope for the rest of the frequency axis. Using this process, I hand drew the four plots above.\n",
+    "\n",
+    "To draw the final phase plot, all the break point frequencies were sorted and the slopes between them are the sum of the individual phase plots.\n",
+    "\n",
+    "Thus, the break frequencies of the total phase plot are\n",
+    "\n",
+    "0.1, 0.7, 2, 5, 10, 70, 200, 500\n",
+    "\n",
+    "The corresponding slopes are\n",
+    "\n",
+    "0.1 to 0.7 rad/s: -45 deg/dec\\\n",
+    "0.7 to   2 rad/s: -90 deg/dec\\\n",
+    "2   to   5 rad/s: -45 deg/dec\\\n",
+    "5   to  10 rad/s: -90 deg/dec\\\n",
+    "10  to  70 rad/s: -45 deg/dec\\\n",
+    "70  to 200 rad/s:   0 deg/dec\\\n",
+    "200 rad/s and on: -45 deg/dec\n",
+    "\n",
+    "Drawing these line segments creates the final phase plot.\n",
+    "\n",
+    "To check my hand drawn phase plot against the computer generated one, I compared the frequencies where my plot crosses -45, -90, and -135 deg with the Python plot.\n",
+    "\n",
+    "| Deg Crossing | Computer Freq  | Hand Drawn Freq |\n",
+    "| ------------ | ------------   | --------------- |\n",
+    "| -45          | 0.83 rad/s     | 0.8 rad/s\\      |\n",
+    "| -90          | 3.04 rad/s     | 3.5 rad/s\\      |\n",
+    "| -135         | 20.74 rad/s    | 17.0 rad/s      |\n",
+    "\n",
+    "The hand drawn and computer frequency crossing are somewhat close.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6950d337",
@@ -58,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e511b02917ed4b28a047079a1f6993de",
+       "model_id": "74577c3c44dc4ca7a9becc3792083984",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,6 +148,16 @@
     "\n",
     "# Clean up workspace\n",
     "del numg, deng, G, fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4328120a",
+   "metadata": {},
+   "source": [
+    "#### Future Improvements\n",
+    "\n",
+    "Overlay hand drawn straight line segments over generated Bode plots."
    ]
   }
  ],
