--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -58,14 +58,14 @@
     "\n",
     "Unlike magnitude where the slope starts at the pole, for phase, the slope begins a decade before and after the pole. So my technique is to draw the individual phase plots for each pole/zero first, and then add them all to produce the final phase plot. Like before with the magnitude plots, semi-log paper and a ruler is highly advised.\n",
     "\n",
-    "For first order terms, the phase is constant (slope is flat) until a decade before the pole, slopes up/down by 45deg/dec for 2 decades (so ends decade after the pole), and then resumes being constant (flat) for the rest of the frequency range. The phase slope goes up if the frequency is a zero, and goes down if it's a zero. See Figure 10.9 for more info.\n",
+    "For first order terms, the phase is constant (slope is flat) until a decade before the pole/zero, slopes up/down by 45deg/dec for 2 decades (so ends a decade after the pole/zero), and then resumes being constant (flat) for the rest of the frequency range. The phase slope goes up if the frequency is a zero, and goes down if it's a zero. See Figure 10.9 for more info.\n",
     "\n",
     "The \"break frequencies\" where the phase slope changes will be determined first. As previously stated, the phase slope starts a decade before the pole/zero frequency and ends a decade after. Thus, the break frequencies are\n",
     "\n",
     "For pole at -1:  0.1 to 10  rad/s, slope negative\\\n",
     "For pole at -7:  0.7 to 70  rad/s, slope negative\\\n",
-    "For pole at -50: 0.5 to 500 rad/s, slope negative\\\n",
-    "For zero at -20: 0.2 to 200 rad/s, slope positive\n",
+    "For pole at -50: 5 to 500 rad/s, slope negative\\\n",
+    "For zero at -20: 2 to 200 rad/s, slope positive\n",
     "\n",
     "The slopes for each pole/zero have been included. For example, for the pole at -1, the slope is 0 deg/dec until 0.1 rad/s, then decreases by -45 deg/dec until 10 rad/s, then returns to 0 deg/dec and stays at this slope for the rest of the frequency axis. Using this process, I hand drew the four plots above.\n",
     "\n",
@@ -83,7 +83,8 @@
     "5   to  10 rad/s: -90 deg/dec\\\n",
     "10  to  70 rad/s: -45 deg/dec\\\n",
     "70  to 200 rad/s:   0 deg/dec\\\n",
-    "200 rad/s and on: -45 deg/dec\n",
+    "200 to 500 rad/s: -45 deg/dec\\\n",
+    "500 rad/s and on: -45 deg/dec\n",
     "\n",
     "Drawing these line segments creates the final phase plot.\n",
     "\n",
