More improvements to skill assess 10.2 phase plotting.

--- a/ch10/skill_assess_10_2.ipynb
+++ b/ch10/skill_assess_10_2.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "#### Drawing the Phase Response\n",
     "\n",
-    "Unlike magnitude where the slope starts at the pole, for phase, the slope begins a decade before and after the pole. So my technique is to draw the individual phase plots for each pole/zero first, and then add them all to produce the final phase plot. Like before with the magnitude plots, semi-log paper and a ruler is highly advised.\n",
+    "Unlike magnitude where the slope starts at the pole/zero, for phase, the slope begins a decade before and after the pole/zero. So my technique is to draw the individual phase plots for each pole/zero first, and then add them all to produce the final phase plot. Like before with the magnitude plots, semi-log paper and a ruler is highly advised.\n",
     "\n",
     "For first order terms, the phase is constant (slope is flat) until a decade before the pole/zero, slopes up/down by 45deg/dec for 2 decades (so ends a decade after the pole/zero), and then resumes being constant (flat) for the rest of the frequency range. The phase slope goes up if the frequency is a zero, and goes down if it's a zero. See Figure 10.9 for more info.\n",
     "\n",
@@ -92,8 +92,8 @@
     "\n",
     "| Deg Crossing | Computer Freq  | Hand Drawn Freq |\n",
     "| ------------ | ------------   | --------------- |\n",
-    "| -45          | 0.83 rad/s     | 0.8 rad/s\\      |\n",
-    "| -90          | 3.04 rad/s     | 3.5 rad/s\\      |\n",
+    "| -45          | 0.83 rad/s     | 0.80 rad/s       |\n",
+    "| -90          | 3.04 rad/s     | 3.50 rad/s       |\n",
     "| -135         | 20.74 rad/s    | 17.0 rad/s      |\n",
     "\n",
     "The hand drawn and computer frequency crossing are somewhat close.\n"
