Grammar improvement to skill assess 10.8

--- a/ch10/skill_assess_10_8.ipynb
+++ b/ch10/skill_assess_10_8.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "078cc7915c8f4998af8223ba1a491c06",
+       "model_id": "893593cdea654718be8a43e23de8186b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77fbec0e3a3c42ebb718c5af9dcca9de",
+       "model_id": "a755094012294d57855095402fe9eceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     "\n",
     "In the Nichol's chart, the blue open-response curve crosses where the dotted gray lines of -20dB and -180 deg meet, meaning the closed-loop response at -20dB will also have -180 deg phase shift, whatever this frequency may be. Viewing the solutions manual Bode plots, the magnitude is -20 dB and the phase is -180 deg at the same frequency, which is $\\omega \\approx 35 rad/s$.\n",
     "\n",
-    "Repeating the above process, the blue open-response curve crosses the dotted gray lines of -40dB and -225deg meet, meaning the closed response will have -40dB mag and -225deg phase at the same frequency. Viewing the solutions manual Bode plot, -40dB and -225deg occur at $\\omega \\approx 90 rad/s$."
+    "Repeating the above process, the blue open-response curve crosses where the dotted gray lines of -40dB and -225deg meet, so the closed-response will have -40dB mag and -225deg phase at a certain frequency. Viewing the solutions manual Bode plot, -40dB and -225deg occur at $\\omega \\approx 90 rad/s$."
    ]
   }
  ],
