Grammar changes to skill assess 10.11. No concept, code, or math changes.

--- a/ch10/skill_assess_10_11.ipynb
+++ b/ch10/skill_assess_10_11.ipynb
@@ -15,7 +15,7 @@
     "G(s) = \\frac{10}{s(s+1)}\n",
     "$$\n",
     "\n",
-    "find the phase margin if there is a delay in forward path of \n",
+    "find the phase margin if there is a delay in the forward path of \n",
     "\n",
     "__a.__ 0 s\n",
     "\n",
@@ -29,7 +29,7 @@
     "\n",
     "Bode plots of the open-loop response of the system are used to determine the phase margin.\n",
     "\n",
-    "For part a with no delay, the system is just G(s), so the Bode plots of G(s) will be generated."
+    "For part __a__ with no delay, the system is just G(s), so the Bode plots of G(s) will be generated."
    ]
   },
   {
@@ -96,7 +96,7 @@
    "id": "b79c9a6a",
    "metadata": {},
    "source": [
-    "The method of determining phase margin from open-loop-response Bode plots is to find the phase where the magnitude is 0dB and subtract -180° from that.\n",
+    "The method of determining phase margin from the open-loop-response Bode plots is to find the phase where the magnitude is 0dB and subtract -180° from that.\n",
     "\n",
     "In the Bode plots above, 0dB occurs at 3.08 rad/s. At this frequency, the phase is -162°. Thus the phase margin is -162-(-180) = 18°.\n",
     "\n",
