Grammar changes to skill assess 10.11. No concept, code, or math changes.

--- a/ch10/skill_assess_10_11.ipynb
+++ b/ch10/skill_assess_10_11.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "#### ANSWERS\n",
     "\n",
-    "##### PART A: 0s\n",
+    "##### PART A: Time Delay = 0.1 s\n",
     "\n",
     "Bode plots of the open-loop response of the system are used to determine the phase margin.\n",
     "\n",
@@ -102,7 +102,7 @@
     "\n",
     "##### PART B: Time Delay = 0.1 s\n",
     "\n",
-    "With a time delay of 0.1 seconds, the total system's phase response will change. The `pade` function is used to create a system of pure time delay. Note that this isn't the overall delayed system G'(s); this is just $e^{-j\\omega T}$, where $T$ is the time delay of 0.1 seconds here. To get the overall G'(s), $e^{-j\\omega T}$ is multiplied with G(s).\n",
+    "With a time delay of 0.1 seconds, the total system's phase response will change. The `pade` function is used to create a system of pure time delay. Note that this isn't the overall delayed system G'(s); this is just $e^{-j\\omega T}$, where $T$ is the time delay of 0.1 seconds. To get the overall G'(s), $e^{-j\\omega T}$ is multiplied with G(s).\n",
     "\n",
     "With the new G'(s), the phase margin is found using the same process as part a.\n",
     "\n",
@@ -156,11 +156,11 @@
     "\n",
     "# Create and plot system of pure time delay\n",
     "delay = 0.1\n",
-    "order = 12 # MATLAB code uses this value in pade function\n",
+    "order = 12                          # TryIt 10.6 MATLAB code uses this value\n",
     "numd, dend = ct.pade(delay, order)\n",
-    "Gd = ct.tf(numd, dend) # create delay transfer function\n",
+    "Gd = ct.tf(numd, dend)              # create time delay transfer function\n",
     "fig2 = plt.figure(2)\n",
-    "ct.bode(Gd, dB=True) # Bode plot delay function\n",
+    "ct.bode(Gd, dB=True)                # Bode plot delay function\n",
     "\n",
     "# # Create and plot total system with time delay\n",
     "Ge = Gd*G\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3e33b9da",
    "metadata": {},
    "outputs": [
@@ -219,11 +219,11 @@
     "\n",
     "# Create and plot system of pure time delay\n",
     "delay = 3\n",
-    "order = 12 # MATLAB code uses this value in pade function\n",
+    "order = 12                          # MATLAB code uses this value in pade function\n",
     "numd, dend = ct.pade(delay, order)\n",
-    "Gd = ct.tf(numd, dend) # create delay transfer function\n",
+    "Gd = ct.tf(numd, dend)              # create delay transfer function\n",
     "fig3 = plt.figure(3)\n",
-    "ct.bode(Gd, dB=True) # Bode plot delay function\n",
+    "ct.bode(Gd, dB=True)                # Bode plot delay function\n",
     "\n",
     "# # Create and plot total system with time delay\n",
     "Ge = Gd*G\n",
