Updated some incorrect sign values and grammar for skill assess 11.1

--- a/ch11/skill_assess_11_01.ipynb
+++ b/ch11/skill_assess_11_01.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "First, select a gain $K$ value to set the low frequency response to 0dB so the Bode plots can be generated.\n",
     "\n",
-    "Since $s=0$ can't be used for the low frequency, $s = 0.1$ will be used i. Since 0dB at this low frequency is desired, set $G(0.1) = 1$.\n",
+    "Since $s=0$ can't be used for the low frequency, $s = 0.1$ will be used instead. Since 0dB at this low frequency is desired, set $G(0.1) = 1$.\n",
     "\n",
     "$$\n",
     "G(0.1) = \\frac{K}{0.1(0.1+50)(0.1+120)}\n",
